<resources>
    <string name="app_name">RestApp</string>
    <string name="greeting_next">Next</string>
    <string name="text_name1">It is free</string>
    <string name="text_name2">Enjoy  with Resttab</string>
    <string name="text_name3">Best meals all over the world</string>
    <string name="text_description1">Best meals all over the world </string>
    <string name="text_description2">See and prepare, repeat and be one of us</string>
    <string name="text_description3"> </string>
    <string name="Enter">Enter</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receive_code">Register</string>
    <string name="enter_button">Войти</string>
    <string name="not_received_code">Did not receive the code?</string>
    <string name="send_again">Send again</string>
    <string name="send_message">Send message</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="info">Info</string>
    <string name="turbo">Turbo</string>
    <string name="welcome">Welcome</string>
    <string name="_1111">1111</string>
    <string name="area">Area:</string>
    <string name="uzb">UZB</string>
    <string name="category">Category:</string>
    <string name="asian">Asian</string>
    <string name="instruction">Instruction</string>
    <string name="textview">TextView</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="pineapple">Pineapple</string>
    <string name="_100">100</string>
    <string name="instructionText">InstructionText</string>
    <string name="ingredient">Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="beef">Beef</string>
    <string name="breakfast">Breakfast</string>
    <string name="chicken">Chicken</string>
    <string name="dessert">Dessert</string>
    <string name="goat">Goat</string>
    <string name="lamb">Lamb</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pasta">Pasta</string>
    <string name="pork">Pork</string>
    <string name="seafood">Seafood</string>
    <string name="side">Side</string>
    <string name="starter">Starter</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="please_check_internet_connection">Please Check Internet Connection</string>
    <string name="retry">Retry</string>
</resources>